# GristMill

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COOKBOOK.md  Dockerfile  Getting_Started.md  GristMill-PRD-v2.docx  GristMill_Spec_v1.1.docx  GristMill_Spec_v1.1.md  GristMill_Spec_v2.0.docx  LICENSE  README.md  SECURITY.md  docker-compose.mac.yml  docker-compose.nvidia.yml  docker-compose.rocm.yml  docker-compose.yml  docker-entrypoint.sh  gristmill-v2-architecture.jsx  gristmill-v2-architecture.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: docker.yml  integration.yml  python.yml  release.yml  rust.yml  typescript.yml
gristmill-core/: Cargo.toml  README.md
gristmill-core/crates/grist-bus/: Cargo.toml  README.md
gristmill-core/crates/grist-bus/src/: lib.rs
gristmill-core/crates/grist-config/: Cargo.toml  README.md
gristmill-core/crates/grist-config/src/: lib.rs
gristmill-core/crates/grist-core/: Cargo.toml  README.md
gristmill-core/crates/grist-core/src/: embedder.rs  error.rs  lib.rs
gristmill-core/crates/grist-event/: Cargo.toml  README.md
gristmill-core/crates/grist-event/src/: lib.rs
gristmill-core/crates/grist-ffi/: Cargo.toml  README.md  build.rs
gristmill-core/crates/grist-ffi/src/: core.rs  error.rs  lib.rs  napi_bridge.rs  pyo3_bridge.rs
gristmill-core/crates/grist-grinders/: Cargo.toml  README.md
gristmill-core/crates/grist-grinders/src/: adapter_watcher.rs  config.rs  embedder.rs  error.rs  gguf.rs  lib.rs  onnx.rs  pool.rs  registry.rs  session.rs
gristmill-core/crates/grist-hammer/: Cargo.toml  README.md
gristmill-core/crates/grist-hammer/src/: batcher.rs  budget.rs  cache.rs  config.rs  error.rs  lib.rs  router.rs  types.rs
gristmill-core/crates/grist-ledger/: Cargo.toml  README.md
gristmill-core/crates/grist-ledger/src/: cold.rs  compactor.rs  config.rs  embedder.rs  error.rs  hot.rs  lib.rs  memory.rs  warm.rs
gristmill-core/crates/grist-millwright/: Cargo.toml  README.md
gristmill-core/crates/grist-millwright/checkpoints/: 01KJ3FRYV83RV0W8TN113AZ0QC.json  01KJ3FRYV8755KX8MJFMQC7VC4.json  01KJ3FRYV8AK6NJN1RN3YJTKZY.json  01KJ3FRYV8AT11ZKA5PQF4TGSH.json  01KJ3FRYV8E7TPAFZQX9462H5R.json  01KJ3FRYV8SNMVPKYMX14M2AMG.json  01KJ3FRYV8YGV3NA3YMCVYSTFN.json  01KJ3FRYV8YY972EJ2K8MHH919.json  01KJ3FRYV993SRWQQX5SZ829JJ.json  01KJ3FZ4NK00X2RWXZYK6CH2H6.json  01KJ3FZ4NK4EKDX47C2WVJH7ED.json  01KJ3FZ4NKB5X4JFT36V7EBCKF.json  01KJ3FZ4NKCN9FTBWB7XQ5RFGJ.json  01KJ3FZ4NKN9YBJ45C78NKZSCD.json  01KJ3FZ4NKWPZ19HTXKVN7DZH5.json  01KJ3FZ4NMDD3G6MBVQDMBM6QK.json  01KJ3FZ4NMMPGW6M610C1VNF0M.json  01KJ3FZ4NMX84TBHZ8NK92F2NR.json  01KJ3GCR13CXQ7TM53DEFVZM9T.json  01KJ3GCR13E5E9AADSDHY6H450.json  01KJ3GCR13G8H3TA8T038MP2K5.json  01KJ3GCR13TB1AP8JTVWM79ZYF.json  01KJ3GCR13V9DVSG6FNFF0MWQ1.json  01KJ3GCR13YZD8ZYJ7CTAYXKX1.json  01KJ3GCR14C3DS99CJJZVSH5WZ.json  01KJ3GCR14CSSA3KK8AD54AXMR.json  01KJ3GCR14FYW7K1RAH1Z1SK1Q.json  01KJ3GD3E21HH9FVFBN7B1VYYW.json  01KJ3GD3E24RQDK0B2527KGG6F.json  01KJ3GD3E294QJD9XHKP2K17KS.json  01KJ3GD3E2BJ3AP9ZGRJYVHCDE.json  01KJ3GD3E2P3ZA0HP970RFP57M.json  01KJ3GD3E2P7EJJM52MS5PQVY3.json  01KJ3GD3E2SEFYPX56JNBWBW2D.json  01KJ3GD3E2TV1EZBAM9BVNS7ZX.json  01KJ3GD3E2VJWCBV8NMXGJYGV8.json  01KJ3GDFR6G2DW1C5980J5G6VV.json  01KJ3GDFR6RJCME5X3M577M7MW.json  01KJ3GDFR6W9VRRHH2V85H716H.json  01KJ3GDFR7D355KM3HMPFN990P.json  (+41 more)
gristmill-core/crates/grist-millwright/src/: checkpoint.rs  config.rs  dag.rs  error.rs  gates.rs  lib.rs  retry.rs  scheduler.rs
gristmill-core/crates/grist-sieve/: Cargo.toml  README.md
gristmill-core/crates/grist-sieve/src/: cache.rs  classifier.rs  config.rs  cost_oracle.rs  error.rs  features.rs  feedback.rs  lib.rs  pii.rs  training_buffer.rs
gristmill-core/data/ledger/: warm.db
gristmill-core/gristmill-cli/: Cargo.toml
gristmill-core/gristmill-cli/src/: client.rs  main.rs
gristmill-core/gristmill-cli/src/commands/: daemon.rs  memory.rs  metrics.rs  mod.rs  models.rs  pipeline.rs  train.rs  watch.rs
gristmill-core/gristmill-daemon/: Cargo.toml  README.md
gristmill-core/gristmill-daemon/src/: ipc.rs  main.rs  trainer_socket.rs
gristmill-core/gristmill-daemon/tests/: integration_test.rs
gristmill-data/: config.yaml  config.yaml.template
gristmill-integrations/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
gristmill-integrations/src/: cli.ts  index.ts  main.ts
gristmill-integrations/src/bell-tower/: dispatcher.ts  index.ts  watch.ts
gristmill-integrations/src/core/: bridge.ts  config.ts  ipc-bridge.ts
gristmill-integrations/src/dashboard/: server.ts
gristmill-integrations/src/hopper/: fs.ts  (+7 more)
gristmill-integrations/tests/: config.test.ts  slack-brain.test.ts  slack.test.ts  smoke.test.ts
gristmill-ml/: README.md  pyproject.toml
gristmill-ml/etc/: com.gristmill.trainer.plist  gristmill-trainer.service
gristmill-ml/notebooks/: 01_training_walkthrough.ipynb  02_routing_analysis.ipynb  03_model_comparison.ipynb
gristmill-ml/scripts/: bootstrap_models.py
gristmill-ml/src/gristmill_ml/: __init__.py  core.py
gristmill-ml/src/gristmill_ml/community/: __init__.py  bootstrap.py  client.py
gristmill-ml/src/gristmill_ml/datasets/: __init__.py  augmentation.py  feedback.py  loaders.py
gristmill-ml/src/gristmill_ml/experiments/: __init__.py  comparisons.py  tracking.py
gristmill-ml/src/gristmill_ml/export/: __init__.py  bundle.py  onnx_export.py  quantize.py  validate.py
gristmill-ml/src/gristmill_ml/federated/: __init__.py  aggregator.py  contributor.py
gristmill-ml/src/gristmill_ml/pipelines/: __init__.py  custom_model.py  retrain_sieve.py
gristmill-ml/src/gristmill_ml/second_brain/: __init__.py  models.py  processor.py
gristmill-ml/src/gristmill_ml/trainer/: __init__.py  __main__.py  checkpoint.py  distillation.py  health_api.py  ipc_server.py  retention.py  service.py  validation.py
gristmill-ml/src/gristmill_ml/training/: __init__.py  embedder_trainer.py  ner_trainer.py  sieve_trainer.py
gristmill-ml/tests/: test_core.py
(+31 files in other folders)
