[package]
name            = "gristmill-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description     = "GristMill command-line interface"

[[bin]]
name = "gristmill"
path = "src/main.rs"

[dependencies]
tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
rmp-serde   = { workspace = true }
anyhow      = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
clap        = { version = "4", features = ["derive", "color", "env"] }
colored     = "2"
dirs        = "5"
