[package]
name        = "gristmill-daemon"
description = "GristMill long-running daemon binary"
version.workspace   = true
edition.workspace   = true
authors.workspace   = true
license.workspace   = true

[[bin]]
name = "gristmill-daemon"
path = "src/main.rs"

[dependencies]
grist-core       = { path = "../crates/grist-core" }
grist-event      = { path = "../crates/grist-event" }
grist-millwright = { path = "../crates/grist-millwright" }

tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
rmp-serde          = { workspace = true }
anyhow             = { workspace = true }

[dev-dependencies]
grist-config = { path = "../crates/grist-config" }
tempfile = "3"
