[package]
name        = "grist-config"
description = "Configuration management for GristMill (YAML/TOML + env overlay)"
version.workspace   = true
edition.workspace   = true
authors.workspace   = true
license.workspace   = true

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }

# YAML parsing
serde_yaml  = "0.9"

[dev-dependencies]
tempfile    = { workspace = true }
