[package]
name        = "grist-event"
description = "GristEvent — the universal message type for GristMill"
version.workspace   = true
edition.workspace   = true
authors.workspace   = true
license.workspace   = true

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
ulid        = { workspace = true }
chrono      = { workspace = true }
thiserror   = { workspace = true }
sha2        = { workspace = true }
hex         = { workspace = true }
