[package]
name        = "grist-millwright"
description = "DAG orchestrator for GristMill — parallel pipeline execution with checkpoints, gates, and retry"
version.workspace   = true
edition.workspace   = true
authors.workspace   = true
license.workspace   = true

[dependencies]
grist-event  = { path = "../grist-event" }
grist-bus    = { path = "../grist-bus" }

# async runtime
tokio        = { workspace = true }

# serialization
serde        = { workspace = true }
serde_json   = { workspace = true }

# utilities
thiserror    = { workspace = true }
anyhow       = { workspace = true }
tracing      = { workspace = true }
metrics      = { workspace = true }
parking_lot  = { workspace = true }
dashmap      = { workspace = true }
ulid         = { workspace = true }
chrono       = { workspace = true }

[dev-dependencies]
tokio              = { workspace = true }
tracing-subscriber = { workspace = true }
tempfile           = { workspace = true }
